--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de confianza</span>
+                Hyperblog <span id="tagline">Tu blog maestro</span>
             </div>
 
             <div id="post">
@@ -18,6 +18,7 @@
                     tus ideas. Mucho mas que ir a conferencias o salir en 
                     Youtube. Excepto si eres un rockstar. Pero estadisticamente
                     no lo eres.... por ahora.
+                    <p>Suscribete y dale like</p>
                 </p>
             </div>
         </div>
